tests/baselines/reference/hidingConstructSignatures.errors.txt
hidingConstructSignatures.ts(18,1): error TS2454: Variable 'd' is used before being assigned.
hidingConstructSignatures.ts(19,5): error TS2454: Variable 'd' is used before being assigned.
hidingConstructSignatures.ts(22,5): error TS2454: Variable 'f' is used before being assigned.
hidingConstructSignatures.ts(25,5): error TS2454: Variable 'e' is used before being assigned.


==== hidingConstructSignatures.ts (4 errors) ====
    interface C {
        (a: string): string;
    }
    
    interface D extends C {
        new (a: string): number; // Should be ok
    }
    
    interface E {
        new (a: string): {};
    }
    
    interface F extends E {
        new (a: string): string;
    }
    
    var d: D;
    d(""); // string
    ~
!!! error TS2454: Variable 'd' is used before being assigned.
    new d(""); // should be number
        ~
!!! error TS2454: Variable 'd' is used before being assigned.
    
    var f: F;
    new f(""); // string
        ~
!!! error TS2454: Variable 'f' is used before being assigned.
    
    var e: E;
    new e(""); // {}
        ~
!!! error TS2454: Variable 'e' is used before being assigned.